Setting up semantic HTML

--- a/index.html
+++ b/index.html
@@ -14,20 +14,28 @@
   <body>
     <header>
       <nav>
-        <a href="">Hjem</a><a href="">Om meg</a><a href="">Prosjekter</a>
+        <a href="">Hjem</a>
+        <a href="">Om meg</a>
+        <a href="">Prosjekter</a>
       </nav>
     </header>
     <main>
       <section>
         <h1>Velkommen til min side!</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
-          eligendi beatae? Quo magni sed vero?
-        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa,
+          eligendi beatae? Quo magni sed vero?</p>
       </section>
-      <section><h2>Om meg</h2></section>
-      <section><h2>Prosjekter</h2></section>
+      <section>
+        <h2>Om meg</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore soluta natus porro eaque, aperiam tempore hic obcaecati totam fugit corporis!</p>
+      </section>
+      <section>
+        <h2>Prosjekter</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </section>
     </main>
-    <footer><h3>Laget av Julie</h3></footer>
+    <footer>
+      <h3>Laget av Julie</h3>
+    </footer>
   </body>
 </html>
